// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshots It should render the Rockets page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="rocketsContainer"
      >
        <li
          class="rocket"
        >
          <img
            alt="Falcon Heavy"
            class="rocketImg"
          />
          <div
            class="rocketDetails"
          >
            <h2
              class="rocketTitle"
            >
              Falcon Heavy
            </h2>
            <p>
              With the ability to lift into orbit over 54 metric tons (119,000 lb)--a mass equivalent to a 737 jetliner loaded with passengers, crew, luggage and fuel--Falcon Heavy can lift more than twice the payload of the next closest operational vehicle, the Delta IV Heavy, at one-third the cost.
            </p>
            <button
              class="
            button
            blue
            reserveButton
          "
              type="button"
            >
              Reserve Rocket
            </button>
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="rocketsContainer"
    >
      <li
        class="rocket"
      >
        <img
          alt="Falcon Heavy"
          class="rocketImg"
        />
        <div
          class="rocketDetails"
        >
          <h2
            class="rocketTitle"
          >
            Falcon Heavy
          </h2>
          <p>
            With the ability to lift into orbit over 54 metric tons (119,000 lb)--a mass equivalent to a 737 jetliner loaded with passengers, crew, luggage and fuel--Falcon Heavy can lift more than twice the payload of the next closest operational vehicle, the Delta IV Heavy, at one-third the cost.
          </p>
          <button
            class="
            button
            blue
            reserveButton
          "
            type="button"
          >
            Reserve Rocket
          </button>
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App snapshots It should render the app 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="nav"
      >
        <div
          class="brand d-flex"
        >
          <img
            alt="Logo"
            src="logo.png"
            width="70px"
          />
          <h2>
            Space Travelers’ Hub
          </h2>
        </div>
        <ul
          class="nav-links"
        >
          <a
            href="/"
          >
            Rockets
          </a>
          <a
            href="/mission"
          >
            Missions
          </a>
          <a
            class="profile-link"
            href="/profile"
          >
            Profile
          </a>
        </ul>
      </nav>
      <ul
        class="rocketsContainer"
      >
        <li
          class="rocket"
        >
          <img
            alt="Falcon Heavy"
            class="rocketImg"
          />
          <div
            class="rocketDetails"
          >
            <h2
              class="rocketTitle"
            >
              Falcon Heavy
            </h2>
            <p>
              With the ability to lift into orbit over 54 metric tons (119,000 lb)--a mass equivalent to a 737 jetliner loaded with passengers, crew, luggage and fuel--Falcon Heavy can lift more than twice the payload of the next closest operational vehicle, the Delta IV Heavy, at one-third the cost.
            </p>
            <button
              class="
            button
            blue
            reserveButton
          "
              type="button"
            >
              Reserve Rocket
            </button>
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <nav
      class="nav"
    >
      <div
        class="brand d-flex"
      >
        <img
          alt="Logo"
          src="logo.png"
          width="70px"
        />
        <h2>
          Space Travelers’ Hub
        </h2>
      </div>
      <ul
        class="nav-links"
      >
        <a
          href="/"
        >
          Rockets
        </a>
        <a
          href="/mission"
        >
          Missions
        </a>
        <a
          class="profile-link"
          href="/profile"
        >
          Profile
        </a>
      </ul>
    </nav>
    <ul
      class="rocketsContainer"
    >
      <li
        class="rocket"
      >
        <img
          alt="Falcon Heavy"
          class="rocketImg"
        />
        <div
          class="rocketDetails"
        >
          <h2
            class="rocketTitle"
          >
            Falcon Heavy
          </h2>
          <p>
            With the ability to lift into orbit over 54 metric tons (119,000 lb)--a mass equivalent to a 737 jetliner loaded with passengers, crew, luggage and fuel--Falcon Heavy can lift more than twice the payload of the next closest operational vehicle, the Delta IV Heavy, at one-third the cost.
          </p>
          <button
            class="
            button
            blue
            reserveButton
          "
            type="button"
          >
            Reserve Rocket
          </button>
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
